--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mocha": "^3.3.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.6",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "uuid": "^3.0.1"
