--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "list-it-node-capstone",
+  "name": "infinite-tundra-58517",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
