--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "infinite-tundra-58517",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
