--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "express": "^4.15.2",
