--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai-http": "^3.0.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
+    "html-metadata": "^1.6.3",
     "mocha": "^3.3.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.9.6",
